--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "version": "1.1.0",
     "displayName": "Daisy Wheel UI",
     "description": "This package contains a Daisy Wheel UI for Unity.",
-    "dependencies": {
-        "unity.com.ugui": "1.0.0"
-    },
+    "dependencies": {},
     "keywords": [
         "daisy",
         "wheel",
