Added 'Editor' target platform in editor assembly definition.

--- a/Editor/DaisyWheelUIEditorAssemblyDefinition.asmdef
+++ b/Editor/DaisyWheelUIEditorAssemblyDefinition.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "GUID:8467edde1f7dd404db51eb550aa21248"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
