--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "com.bigeti.daisy-wheel-ui",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "displayName": "Daisy Wheel UI",
     "description": "This package contains a Daisy Wheel UI for Unity.",
-    "dependencies": {},
+    "dependencies": {
+        "com.unity.inputsystem": "1.0.1"
+    },
     "keywords": [
         "daisy",
         "wheel",
